k8s/workloads/kubernetes-dashboard/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubdashboard-ingressroute
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints: 
    - websecure
  routes:
    - match: PathPrefix(`/kubernetes-dashboard`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          port: 80
      middlewares:
      - name: stripkubdashboard
        namespace: kubernetes-dashboard

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripkubdashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  stripPrefix:
    prefixes:
      - "/kubernetes-dashboard"
    forceSlash: true
